--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 html{
-    font-family: Arial;
+    font-family: 'Rubik Mono One', sans-serif;
     scroll-behavior: smooth;
 }
 .menu-shoes{
@@ -57,7 +57,7 @@ li {
 .text-shoe{
     color: yellow;
     text-transform: uppercase;
-    font-size: 2.5em;
+    font-size: 2.0em;
     text-align: center;
 }
 .yellow h2{
